gcc/testsuite/rust/rustc/ui/structs/issue-80853_dg.rs
struct S;

fn repro_ref(thing: S) {
    thing(); // { dg-error ".E0618." "" { target *-*-* } }
}

fn main() {}

